--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <img src="https://cdn.podimo.com/images/20f436b3-769c-426f-b0bd-08848f505163_400x400.png" alt="Logo" style="width: 200px; height: 200px;">
     
-    <h1>Práctica Calificada 2</h1>
+    <h1>Práctica Calificada 2 (Previa)</h1>
     <h2>Asignatura: Base de Datos 1</h2>
     
     <div id="timer">Tiempo restante: 90:00</div>
